--- a/ltm.ui
+++ b/ltm.ui
@@ -73,7 +73,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QLabel" name="labMemHeader_2">
+           <widget class="QLabel" name="labCPUHeader">
             <property name="font">
              <font>
               <pointsize>18</pointsize>
@@ -163,7 +163,7 @@
               </widget>
              </item>
              <item row="1" column="1">
-              <widget class="QLabel" name="labMemory_2">
+              <widget class="QLabel" name="labCPULoad">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                  <horstretch>20</horstretch>
@@ -218,7 +218,7 @@
               </widget>
              </item>
              <item row="4" column="1">
-              <widget class="QLabel" name="labSwap_2">
+              <widget class="QLabel" name="labCPUClock">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                  <horstretch>20</horstretch>
@@ -292,18 +292,28 @@
              <property name="sizeConstraint">
               <enum>QLayout::SetDefaultConstraint</enum>
              </property>
-             <item row="2" column="0">
-              <widget class="QLabel" name="label_37">
+             <item row="0" column="0">
+              <widget class="QLabel" name="label_41">
                <property name="text">
-                <string>Logical Cores:</string>
+                <string>Base Clock:</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
                </property>
               </widget>
              </item>
-             <item row="1" column="2">
-              <widget class="QLabel" name="labNetwIp4_3">
+             <item row="3" column="0">
+              <widget class="QLabel" name="label_39">
+               <property name="text">
+                <string>Cache: </string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="2">
+              <widget class="QLabel" name="labCPUBaseClk">
                <property name="font">
                 <font>
                  <weight>75</weight>
@@ -321,93 +331,8 @@
                </property>
               </widget>
              </item>
-             <item row="3" column="0">
-              <widget class="QLabel" name="label_39">
-               <property name="text">
-                <string>L1-Cache:</string>
-               </property>
-               <property name="alignment">
-                <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="0">
-              <widget class="QLabel" name="label_38">
-               <property name="text">
-                <string>Cores:</string>
-               </property>
-               <property name="alignment">
-                <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
-               </property>
-              </widget>
-             </item>
-             <item row="0" column="0">
-              <widget class="QLabel" name="label_41">
-               <property name="text">
-                <string>Base Clock:</string>
-               </property>
-               <property name="alignment">
-                <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
-               </property>
-              </widget>
-             </item>
-             <item row="5" column="2">
-              <widget class="QLabel" name="labNetwMac_4">
-               <property name="font">
-                <font>
-                 <weight>75</weight>
-                 <bold>true</bold>
-                </font>
-               </property>
-               <property name="text">
-                <string>??</string>
-               </property>
-               <property name="wordWrap">
-                <bool>true</bool>
-               </property>
-              </widget>
-             </item>
-             <item row="5" column="0">
-              <widget class="QLabel" name="label_40">
-               <property name="text">
-                <string>L3-Cache:</string>
-               </property>
-               <property name="alignment">
-                <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
-               </property>
-              </widget>
-             </item>
-             <item row="6" column="0">
-              <spacer name="verticalSpacer_14">
-               <property name="orientation">
-                <enum>Qt::Vertical</enum>
-               </property>
-               <property name="sizeHint" stdset="0">
-                <size>
-                 <width>20</width>
-                 <height>5</height>
-                </size>
-               </property>
-              </spacer>
-             </item>
-             <item row="1" column="1">
-              <spacer name="horizontalSpacer_15">
-               <property name="orientation">
-                <enum>Qt::Horizontal</enum>
-               </property>
-               <property name="sizeType">
-                <enum>QSizePolicy::Fixed</enum>
-               </property>
-               <property name="sizeHint" stdset="0">
-                <size>
-                 <width>10</width>
-                 <height>20</height>
-                </size>
-               </property>
-              </spacer>
-             </item>
-             <item row="0" column="2">
-              <widget class="QLabel" name="labNetwType_3">
+             <item row="1" column="2">
+              <widget class="QLabel" name="labCPUPhysCores">
                <property name="font">
                 <font>
                  <weight>75</weight>
@@ -426,7 +351,7 @@
               </widget>
              </item>
              <item row="3" column="2">
-              <widget class="QLabel" name="labNetwSpeed_3">
+              <widget class="QLabel" name="labCPUCache">
                <property name="font">
                 <font>
                  <weight>75</weight>
@@ -441,8 +366,41 @@
                </property>
               </widget>
              </item>
+             <item row="1" column="0">
+              <widget class="QLabel" name="label_38">
+               <property name="text">
+                <string>Phys. Cores:</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="0">
+              <widget class="QLabel" name="label_37">
+               <property name="text">
+                <string>Logical Cores:</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
+               </property>
+              </widget>
+             </item>
+             <item row="4" column="0">
+              <spacer name="verticalSpacer_14">
+               <property name="orientation">
+                <enum>Qt::Vertical</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>20</width>
+                 <height>5</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
              <item row="2" column="2">
-              <widget class="QLabel" name="labNetwIp6_3">
+              <widget class="QLabel" name="labCPULogCores">
                <property name="minimumSize">
                 <size>
                  <width>0</width>
@@ -466,22 +424,21 @@
                </property>
               </widget>
              </item>
-             <item row="4" column="0">
-              <widget class="QLabel" name="label_42">
-               <property name="text">
-                <string>L2-Cache:</string>
+             <item row="1" column="1">
+              <spacer name="horizontalSpacer_15">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
                </property>
-               <property name="alignment">
-                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+               <property name="sizeType">
+                <enum>QSizePolicy::Fixed</enum>
                </property>
-              </widget>
-             </item>
-             <item row="4" column="2">
-              <widget class="QLabel" name="label_43">
-               <property name="text">
-                <string>??</string>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>10</width>
+                 <height>20</height>
+                </size>
                </property>
-              </widget>
+              </spacer>
              </item>
             </layout>
            </item>
@@ -1520,7 +1477,7 @@
                 </font>
                </property>
                <property name="text">
-                <string> </string>
+                <string/>
                </property>
                <property name="wordWrap">
                 <bool>true</bool>
